force-app/main/default/objects/Bus_Stops__c.object
<CustomObject>
    <fields>
        <fullName>Bus_Route_Confirm__c</fullName>
        <formula>Bus_Route__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bus Route Confirm</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bus_Route__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bus Route</label>
        <referenceTo>Bus_Routes__c</referenceTo>
        <relationshipLabel>Bus Stops</relationshipLabel>
        <relationshipName>Bus_Stops</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cost_of_Route__c</fullName>
        <formula>Bus_Route__r.Total_Yearly_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cost of Route</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Drop_Off_Time_ASA__c</fullName>
        <label>Drop Off Time (Activity Day)</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Drop_Off_Time_Friday__c</fullName>
        <label>Drop Off Time (Friday)</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Drop_Off_Time_Regular__c</fullName>
        <label>Drop Off Time (Regular Day)</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_ID_18_Char__c</fullName>
        <description>The ID of the record in the alternate SFDC org, where applicable.</description>
        <externalId>true</externalId>
        <label>External ID (18 Char)</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Fees_Charged__c</fullName>
        <label>% Fees Charged</label>
        <summarizedField>Bus_Association__c.of_Fee_Charged__c</summarizedField>
        <summaryForeignKey>Bus_Association__c.Bus_Stop__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Instructions__c</fullName>
        <label>Instructions</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pick_Up_Time__c</fullName>
        <label>Pick Up Time</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School__c</fullName>
        <formula>TEXT(Owner:User.School__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>School</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stop_Local_Language__c</fullName>
        <label>Stop Local Language</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stop_Revenues__c</fullName>
        <formula>Fees_Charged__c * Student_Bus_Fee__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stop Revenues</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Student_Bus_Fee__c</fullName>
        <formula>Bus_Route__r.Yearly_Bus_Fee__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Student Yearly Bus Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Bus Stop</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Bus_Route__c</columns>
        <columns>NAME</columns>
        <columns>Pick_Up_Time__c</columns>
        <columns>Drop_Off_Time_Regular__c</columns>
        <columns>Drop_Off_Time_ASA__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Bus Stop Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bus Stops</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>